# acorn

./: .gitmodules  CMakeLists.txt  README.md
assets/: kenney_license.txt
assets/PavingStones045/: PavingStones045.mtl
assets/env/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/rock03/: 3DRock03.mtl
assets/shaders/: brdf_lut.frag  diffuse_irradiance_convolution.frag  env_map_prefilter.frag  fullscreen.vert  material.frag  material.vert  sky.frag  sky.vert  tonemap.frag
assets/spheres/: spheres.mtl
assets/stylized-rifle/: Stylized_rifle_final.mtl  info.txt
src/: camera.cpp  camera.h  config.cpp  config.h  constants.h  core.cpp  core.h  debug_gui.cpp  debug_gui.h  entity.h  framebuffer.cpp  framebuffer.h  game_state.h  graphics_util.h  log.h  main.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  platform.cpp  platform.h  renderable.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  types.h  utils.cpp  utils.h  vertex.h  window.cpp  (+1 more)
src/graphics/: ibl_probe.cpp  ibl_probe.h  material.h  mesh.cpp  model.cpp  model.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/: scene.cpp  scene.h
